modal-close alignment fix

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -124,18 +124,19 @@ img {
 
 .modal-window {
 	margin: auto;
-	margin-top: 40px;
+	margin-top: 30px;
 	max-width: 370px;
 	background-color: #fff;
 	z-index: 3;
 	box-sizing: border-box;
-	box-shadow: 0 2px 10px rgba(0,0,0,0.5);
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
 	border-radius: 3px;
 }
 
 .modal-close {
-	float: right;
-	margin-top: -30px;
+	position: absolute;
+	transform: translateX(345px);
+	margin-top: 5px;
 	width: 20px;
 	height: 20px;
 	background-image: url('../images/close-button.png');
